# galois-fields

./: ChangeLog.md  README.md  cabal.project  flake.nix  galois-field.cabal
.github/workflows/: cabal.yml
bench/: Main.hs
bench/Bench/: Binary.hs  Extension.hs  Galois.hs  Prime.hs
src/Data/Field/Galois/: Base.hs  Binary.hs  Extension.hs  Frobenius.hs  Prime.hs  Sqrt.hs  Tower.hs  Unity.hs
test/: Main.hs
test/Test/: Binary.hs  Extension.hs  Galois.hs  Prime.hs
