cabal-version:      3.0
name:               galois-field
version:            1.0.4
synopsis:           Galois field library
description:
  An efficient implementation of Galois fields used in cryptography research

category:           Cryptography
homepage:           https://github.com/adjoint-io/galois-field#readme
bug-reports:        https://github.com/adjoint-io/galois-field/issues
maintainer:         Adjoint Inc (info@adjoint.io)
license:            MIT
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.notex.md

common warnings
  ghc-options: -Wall -Wredundant-constraints -Werror

common deps
  build-depends:
    , base            >=4.18
    , bitvec
    , groups
    , integer-gmp
    , mod
    , MonadRandom
    , poly
    , protolude
    , QuickCheck
    , semirings
    , vector
    , wl-pprint-text

common extensions
  default-extensions:
    NoImplicitPrelude
    DataKinds
    OverloadedLists
    OverloadedStrings
    PatternSynonyms
    TypeFamilies
    TypeOperators

library
  import:           warnings, extensions, deps
  exposed-modules:  Data.Field.Galois
  other-modules:
    Data.Field.Galois.Base
    Data.Field.Galois.Binary
    Data.Field.Galois.Extension
    Data.Field.Galois.Frobenius
    Data.Field.Galois.Prime
    Data.Field.Galois.Sqrt
    Data.Field.Galois.Tower
    Data.Field.Galois.Unity

  hs-source-dirs:   src
  ghc-options:      -freverse-errors -O2
  default-language: GHC2021

test-suite galois-field-tests
  import:           warnings, extensions, deps
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Test.Binary
    Test.Extension
    Test.Galois
    Test.Prime

  hs-source-dirs:   test
  ghc-options:      -freverse-errors -O2
  build-depends:
    , galois-field
    , tasty
    , tasty-quickcheck

  default-language: GHC2021

benchmark galois-field-benchmarks
  import:           warnings, extensions, deps
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Bench.Binary
    Bench.Extension
    Bench.Galois
    Bench.Prime

  hs-source-dirs:   bench
  ghc-options:      -freverse-errors -O2
  build-depends:
    , criterion
    , galois-field

  default-language: GHC2021
